unified-quant-platform/app_v9_restart.log
  File "/root/.openclaw/workspace/unified-quant-platform/app_v9.py", line 563
    """智能选股API"""
              ^
SyntaxError: unterminated triple-quoted string literal (detected at line 628)
